# app-eai-agent-engine

./: .gitignore  ARCHITECTURE_DECISION.md  ARCHITECTURE_DIAGRAMS.md  FINAL_ANALYSIS.md  PLAN.md  README.md  README_ORCHESTRATOR.md  TECHNICAL_ANALYSIS.md  TESTING_GUIDE.md  checkpoint_debug.ipynb  comparative_analysis_results.json  debug_mc_agent.py  debug_mcp.py  example_orchestrated_agent.py  flake.nix  generate_diagrams.py  langgraph.md  plan.md  pyproject.toml  services.md  services_plan.md  technical_analysis.py  test.py  test_agent.py  test_architecture_comparison.py  test_integration_complete.py  test_integration_final.py  test_iptu_fake.py  test_mc_agent.py  test_mc_workflow.py  test_mcp_tools.py  test_orchestrator.py  test_realistic_scenario.py  test_recursion_fix.py  test_routing.py  test_setup.py  test_shared_memory.py  test_simple_recursion.py  test_workflow.py  test_workflow_vs_agent.py  (+1 more)
.github/scripts/: check_prev_experiments.py  comment_eval_results.py  compare_averages.py  fail_on_regressions.py  fetch_current_metrics.py  fetch_prev_metrics.py  parse_pr_comment.py  resolve_prompt_versions.py
.github/workflows/: deploy-on-command.yml  eval-on-deploy.yml  pre-deploy-tests.yml
docs/: checkpoint_blobs_pruning_job.md
engine/: __init__.py  agent.py  agent_otl_simple.py  custom_react_agent.py  identification_service_tools.py  mcp_tools.py  monitored_tool_node.py  orchestrated_agent.py  orchestrator.py  robust_tools.py  robust_validation.py  workflow_tools.py
engine/services/: __init__.py  base_service_agent.py  health_agent.py  identification_agent.py  infrastructure_agent.py  tax_agent.py
engine/utils/: __init__.py  agent_phases.py  error_interceptor.py
engine/workflows/: __init__.py  user_identification.py
scripts/: analyze_tool_context_tokens.py  inspect_thread_versions.py  inspect_thread_versions.sql  migrate_checkpoints gshell.py  migrate_checkpoints.py  rollback_migration.sql  show_all_db_messages.py  swap_columns.sql  test_migration.py  verify_migration.sql
service_states/: advanced_deposits_test__bank_account_advanced.json  advanced_error_test__bank_account_advanced.json  data_collection_1758221229.json  data_collection_1758221305.json  data_collection_1758226549.json  data_collection_1758227063.json  data_collection_1758227249.json  final_test__data_collection.json  hahahahahaha5__bank_account.json  hahahahahaha5__bank_account_advanced.json  hahahahahaha5__data_collection.json  test_fix__data_collection.json  validation_user__data_collection.json  visual_complete_test__data_collection.json  visual_error_test__data_collection.json  visual_response_test__bank_account.json
src/: agent_tools.py  deploy.py  interactive_test.py  prompt.py  services.py  tools.py
src/agent/: agent.py  deploy.py  interactive_test.py  prompt.py  tools.py
src/config/: __init__.py  env.py
src/services/: README.md  (+7 more)
teste_ux/: QUICK_START.md  README.md  UX_TEST_GUIDE.md  test_service_agent_ux.py  test_workflow_ux.py  ux_test_selector.py
(+117 files in other folders)
