[project]
name = "app-eai-agent-google-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.1",
    "google-cloud-aiplatform[agent-engines]>=1.106.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-cloud-sql-pg>=0.14.1",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai>=2.0.28",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
