[project]
name = "app-eai-agent-google-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cloudpickle>=3.1.1",
    "google-cloud-aiplatform[agent-engines]>=1.106.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-cloud-sql-pg>=0.14.1",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai>=2.0.28",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.4",
    "loguru>=0.7.3",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-langchain>=0.45.6",
    "opentelemetry-sdk>=1.36.0",
    "pip>=25.2",
    "prefeitura-rio[sgrc]>=1.1.2",
    "pendulum>=2.1.2",
    "pytz>=2023.3",
    "setuptools>=65.0.0",
    "pydantic>=2.11.7",
    "jmespath>=1.0.1",
    "google-cloud-storage>=2.19.0",
    "redis>=7.0.1",
    "pandas>=2.3.3",
    "async-googlemaps>=0.0.10",
    "googlemaps>=4.10.0",
    "geopandas>=1.1.1",
    "jellyfish>=1.2.1",
    "num2words>=0.5.14",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
