[project]
name = "app-eai-agent-google-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.1",
    "google-cloud-aiplatform[agent-engines]>=1.106.0",
    "httpx>=0.27.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=2.1.9",
    "langchain-google-vertexai==2.1.2",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph==1.0.8",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langgraph-prebuilt>=1.0.7",
    "loguru>=0.7.3",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "opentelemetry-instrumentation-langchain==0.51.1",
    "opentelemetry-sdk>=1.36.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
